--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -41,7 +41,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
+custom_proxy_group=🚀 节点选择`select`.*
 
 
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
