--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -44,8 +44,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`.*
 
 
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
 custom_proxy_group=Crypto`select`香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
