--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -45,24 +45,24 @@ custom_proxy_group=🚀 节点选择`select`.*
 
 
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(.*)
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`.*
-custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=Crypto`select`香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=Microsoft`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🎯 全球直连`select`[]🚀 节点选择`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]REJECT`[]DIRECT`(香港|日本|新加坡|美国|台湾|HK|JP|SG|US|TW|🇭🇰|🇯🇵|🇸🇬|🇺🇲)
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=Crypto`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=Microsoft`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🎯 全球直连`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]REJECT`[]DIRECT`(.*)
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 
 ;启用自定义规则集
