--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -4,6 +4,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=Crypto,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/crypto.list
+ruleset=Bookmap,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/bookmap.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Gemini,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=💧 Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Copilot/Copilot.list
@@ -52,6 +53,7 @@ custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=Crypto`select`[]🚀 节点选择`[]DIRECT`(.*)
+custom_proxy_group=Bookmap`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=OpenAI`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=Gemini`select`[]🚀 节点选择`[]DIRECT`(.*)
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`(.*)
