--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -3,6 +3,7 @@
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/oray.list
 ruleset=Crypto,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/crypto.list
 ruleset=Bookmap,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/bookmap.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
