--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -47,7 +47,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]ALL
+custom_proxy_group=🚀 节点选择`select`(.*)
 
 
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`(.*)
