--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -46,43 +46,46 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 
-; ====== ① 节点选择：一次性展开全节点 ======
+; ===== ① 展开全节点（只此一次） =====
 custom_proxy_group=🚀 节点选择`select`(.*)
 
-; ====== ② 地区池（独立展开） ======
+; ===== ② 地区池（同样是独立展开，供选择） =====
 custom_proxy_group=HK`select`(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$))
 custom_proxy_group=TW`select`(台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$))
 custom_proxy_group=JP`select`(🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$))
 custom_proxy_group=SG`select`(🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$))
 custom_proxy_group=US`select`(🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))
 
-; 其它（剩余）
+; ===== ③ 其它（剩余）——两个手选组，内容相同、选择独立 =====
+; 同一条“排除前五地区”的负向匹配正则
 custom_proxy_group=OTHERS1`select`^(?!.*(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$)|台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$)|🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$)|🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$)|🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))).*
-custom_proxy_group=OTHERS2`url-test`^(?!.*(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$)|台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$)|🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$)|🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$)|🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))).*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=OTHERS2`select`^(?!.*(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$)|台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$)|🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$)|🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$)|🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))).*
 
-; ====== ③ 业务分组（顺序：节点选择 → DIRECT → REJECT → 各地区池） ======
-custom_proxy_group=OpenAI`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=Gemini`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=Microsoft`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS2
+; ===== ④ 业务组（顺序：节点选择 → DIRECT → REJECT → 地区池 → OTHERS1 → OTHERS2）=====
+custom_proxy_group=OpenAI`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=Gemini`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=Microsoft`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]US`[]SG`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]HK`[]SG`[]TW`[]US`[]OTHERS2
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]US`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]HK`[]SG`[]TW`[]US`[]OTHERS1`[]OTHERS2
 
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS2
-custom_proxy_group=Crypto`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS2
-custom_proxy_group=Bookmap`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS2
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
+custom_proxy_group=Crypto`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+custom_proxy_group=Bookmap`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 
 custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`[]REJECT
-custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]HK`[]TW`[]US`[]OTHERS2
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS2
+custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]HK`[]TW`[]US`[]OTHERS1`[]OTHERS2
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]DIRECT`[]REJECT
+
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+
 
 ;启用自定义规则集
 
