--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -46,22 +46,22 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 
-; ===== ① 展开全节点（只此一次） =====
+; 一次性展开全节点
 custom_proxy_group=🚀 节点选择`select`(.*)
 
-; ===== ② 地区池（同样是独立展开，供选择） =====
-custom_proxy_group=HK`select`(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$))
-custom_proxy_group=TW`select`(台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$))
-custom_proxy_group=JP`select`(🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$))
-custom_proxy_group=SG`select`(🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$))
-custom_proxy_group=US`select`(🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))
+; 五个地区池（尽量用简单稳定的关键词）
+custom_proxy_group=HK`select`(🇭🇰|香港|Hong Kong|HK)
+custom_proxy_group=TW`select`(台湾|台灣|Taiwan|TW)
+custom_proxy_group=JP`select`(🇯🇵|日本|Japan|JP)
+custom_proxy_group=SG`select`(🇸🇬|新加坡|Singapore|SG)
+custom_proxy_group=US`select`(🇺🇸|美国|美國|United States|USA|US)
 
-; ===== ③ 其它（剩余）——两个手选组，内容相同、选择独立 =====
-; 同一条“排除前五地区”的负向匹配正则
-custom_proxy_group=OTHERS1`select`^(?!.*(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$)|台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$)|🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$)|🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$)|🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))).*
-custom_proxy_group=OTHERS2`select`^(?!.*(🇭🇰|香港|Hong[ -]?Kong|(^|[^A-Za-z])HK([^A-Za-z]|$)|台湾|台灣|Taiwan|(^|[^A-Za-z])TW([^A-Za-z]|$)|🇯🇵|日本|Japan|(^|[^A-Za-z])JP([^A-Za-z]|$)|🇸🇬|新加坡|Singapore|(^|[^A-Za-z])SG([^A-Za-z]|$)|🇺🇸|美国|美國|United[ -]?States|USA|(^|[^A-Za-z])US([^A-Za-z]|$))).*
+; 其它（剩余）——两个手选组，“内容相同、选择独立”
+; 这里用“显式白名单”的国家/地区关键词（从你四个文件里出现的国家整理）
+custom_proxy_group=OTHERS1`select`(🇰🇷|韩国|南韩|Korea|KR|🇨🇦|加拿大|Canada|CA|🇬🇧|英国|UK|United Kingdom|GB|🇹🇷|土耳其|Turkey|TR|🇮🇳|印度|India|IN|🇳🇱|荷兰|Netherlands|NL|🇫🇷|法国|France|FR|🇩🇪|德国|Germany|DE|🇻🇳|越南|Vietnam|VN|🇲🇾|马来|馬來|Malaysia|MY|🇹🇭|泰国|Thailand|TH|🇵🇭|菲律宾|Philippines|PH)
+custom_proxy_group=OTHERS2`select`(🇰🇷|韩国|南韩|Korea|KR|🇨🇦|加拿大|Canada|CA|🇬🇧|英国|UK|United Kingdom|GB|🇹🇷|土耳其|Turkey|TR|🇮🇳|印度|India|IN|🇳🇱|荷兰|Netherlands|NL|🇫🇷|法国|France|FR|🇩🇪|德国|Germany|DE|🇻🇳|越南|Vietnam|VN|🇲🇾|马来|馬來|Malaysia|MY|🇹🇭|泰国|Thailand|TH|🇵🇭|菲律宾|Philippines|PH)
 
-; ===== ④ 业务组（顺序：节点选择 → DIRECT → REJECT → 地区池 → OTHERS1 → OTHERS2）=====
+; 业务分组（顺序：节点选择 → DIRECT → REJECT → 地区池 → OTHERS1 → OTHERS2）
 custom_proxy_group=OpenAI`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=Gemini`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
@@ -85,6 +85,7 @@ custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]DIRECT`[]RE
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
+
 
 
 ;启用自定义规则集
