--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -56,10 +56,9 @@ custom_proxy_group=JP`select`(🇯🇵|日本|Japan|JP)
 custom_proxy_group=SG`select`(🇸🇬|新加坡|Singapore|SG)
 custom_proxy_group=US`select`(🇺🇸|美国|美國|United States|USA|US)
 
-; 其它（剩余）——两个手选组，“内容相同、选择独立”
-; 这里用“显式白名单”的国家/地区关键词（从你四个文件里出现的国家整理）
-custom_proxy_group=OTHERS1`select`(🇰🇷|韩国|南韩|Korea|KR|🇨🇦|加拿大|Canada|CA|🇬🇧|英国|UK|United Kingdom|GB|🇹🇷|土耳其|Turkey|TR|🇮🇳|印度|India|IN|🇳🇱|荷兰|Netherlands|NL|🇫🇷|法国|France|FR|🇩🇪|德国|Germany|DE|🇻🇳|越南|Vietnam|VN|🇲🇾|马来|馬來|Malaysia|MY|🇹🇭|泰国|Thailand|TH|🇵🇭|菲律宾|Philippines|PH)
-custom_proxy_group=OTHERS2`select`(🇰🇷|韩国|南韩|Korea|KR|🇨🇦|加拿大|Canada|CA|🇬🇧|英国|UK|United Kingdom|GB|🇹🇷|土耳其|Turkey|TR|🇮🇳|印度|India|IN|🇳🇱|荷兰|Netherlands|NL|🇫🇷|法国|France|FR|🇩🇪|德国|Germany|DE|🇻🇳|越南|Vietnam|VN|🇲🇾|马来|馬來|Malaysia|MY|🇹🇭|泰国|Thailand|TH|🇵🇭|菲律宾|Philippines|PH)
+; 其它（剩余）——两个手选组
+custom_proxy_group=OTHERS1`select`(.*)
+custom_proxy_group=OTHERS2`select`(.*)
 
 ; 业务分组（顺序：节点选择 → DIRECT → REJECT → 地区池 → OTHERS1 → OTHERS2）
 custom_proxy_group=OpenAI`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
