--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -66,7 +66,7 @@ custom_proxy_group=Gemini`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=Microsoft`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
-
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]SG`[]JP`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
