--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -72,16 +72,14 @@ custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]J
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]US`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]HK`[]SG`[]TW`[]US`[]OTHERS1`[]OTHERS2
-
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]HK`[]SG`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=Crypto`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=Bookmap`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
-
 custom_proxy_group=🍎 Apple`select`[]🚀 节点选择`[]DIRECT`[]REJECT
 custom_proxy_group=♻️ Speedtest`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]HK`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎞️ 国内媒体`select`[]🚀 节点选择`[]DIRECT`[]REJECT
-
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]JP`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 
