--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -25,6 +25,7 @@ ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Apple/Apple.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=♻️ Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
+ruleset=Discord,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Discord/Discord.list
 ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 #ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
@@ -60,6 +61,7 @@ custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
+custom_proxy_group=Discord`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]US`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]HK`[]SG`[]TW`[]US`[]OTHERS1`[]OTHERS2
