--- a/uhovohu.ini
+++ b/uhovohu.ini
@@ -38,6 +38,7 @@ ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/ByteDance.list
 ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/DouYin/DouYin.list
 ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=TruthSocial,https://raw.githubusercontent.com/uhovohu-glitch/clash/refs/heads/main/TruthSocial.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Cloudflare/Cloudflare.list
@@ -64,6 +65,7 @@ custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]US`[]
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]SG`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
+custom_proxy_group=TruthSocial`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=Discord`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]HK`[]JP`[]TW`[]US`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]SG`[]JP`[]US`[]HK`[]TW`[]OTHERS1`[]OTHERS2
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]DIRECT`[]REJECT`[]JP`[]US`[]SG`[]HK`[]TW`[]OTHERS1`[]OTHERS2
